--- a/public/templates/page.mustache
+++ b/public/templates/page.mustache
@@ -1,7 +1,14 @@
 {{#data}}
-<h2>{{title}}</h2>
-<p>{{content}}</p>
+<div class="my">
+  <h2 class="lala"><a href="#page/{{id}}">{{title}}</a></h2>
+
+  <img class="imagine2" src="{{image}}" alt="{{title}}" />
+  <p class="mama">{{content}}</p>
+
+</div>
+
 {{/data}}
+
 {{^data}}
   No pages :(
 {{/data}}
